🐛 fix: ajustar z-index da sidebar
Adiciona `z-index: 999` à sidebar para garantir que o elemento fique acima de outros componentes da interface.

--- a/src/shared/layout/Sidebar/Sidebar.module.scss
+++ b/src/shared/layout/Sidebar/Sidebar.module.scss
@@ -15,6 +15,7 @@ $header-height-tablet: 63px;
     transform: translateX(0);
     transition: transform 0.3s ease;
     width: 206px;
+    z-index: 999;
 
     &.open {
         transform: translateX(0);
